--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.wolfsoft2.activity.DetailSearchActivity" />
+        <activity android:name="com.example.wolfsoft2.activity.DetailShopActivity" />
         <activity android:name="com.example.wolfsoft2.activity.SearchActivity" />
         <activity android:name="com.example.wolfsoft2.activity.ReviewsActivity" />
         <activity android:name="com.example.wolfsoft2.activity.HomeActivity">
